--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@
 name: Generate a build and push to another branch
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
   push:
     branches:
       - main
