--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,9 +30,13 @@ jobs:
 
       - name: Build
         run: npm run buildstatic # The build command of your project
+        
+      - name: touching .nojekkyl
+        run: touch out/.nojekyll
 
-      # - name: copy submodules to out
-      #   run: cp projects/ out/ -r
+      - name: copy submodules to out
+        run: cp projects/ out/ -r
+        run: rm out/projects/*/.git -r
     
       - name: Push
         uses: s0/git-publish-subdir-action@develop
