--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,10 +35,7 @@ jobs:
         run: touch out/.nojekyll
 
       - name: copy submodules to out
-        run: cp projects/ out/ -r
-
-      - name: delete git from project folders
-        run: rm out/projects/*/.git -r
+        run: 'cp projects/ out/ -r && rm out/projects/*/.git -r && ls out && ls out/projects && ls out/projects/*'
     
       - name: Push
         uses: s0/git-publish-subdir-action@develop
