--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron:  '*/30 * * * *'
+  # schedule:
+  #   - cron:  '*/30 * * * *'
 
 jobs:
   build:
