--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,25 +45,32 @@ jobs:
         
       - name: touching .nojekkyl
         run: touch out/.nojekyll
+      
 
-      - name: copy submodules to out
-        run: 'cp projects/ out/ -r'
+      - name: create folder for branch
+        run: mkdir ../ghpages
+
+      - name: copy out to folder
+        run: cp out/* ../ghpages/ -r
+
+      - name: copy submodules to folder
+        run: 'cp projects/ ../ghpages -r'
     
       - name: 'DEBUG: list out folder'
-        run: ls out -a
+        run: ls ../ghpages -a
 
       - name: 'DEBUG: list out/projects folder'
-        run: ls out/projects -a
+        run: ls ../ghpages/projects -a
 
       - name: 'DEBUG: list out/projects/* folder'
-        run: ls out/projects/* -a  
+        run: ls ../ghpages/projects/* -a  
 
       - name: Push
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
           BRANCH: gh-pages # The branch name where you want to push the assets
-          FOLDER: out # The directory where your assets are generated
+          FOLDER: ../ghpages # The directory where your assets are generated
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
           MESSAGE: "Build: ({sha})" # The commit message
           CLEAR_GLOBS_FILE: '.cleartarget'
