--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,13 @@ jobs:
       - name: going back
         run: cd ../..
 
+      - name: 'DEBUG: ls public projects'
+        run: ls public/projects
+      
+      - name: 'DEBUG: ls public projects *'
+        run: ls public/projects/*
+
+
       - name: get node
         uses: actions/setup-node@v2
         with:
