--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,10 @@ jobs:
 
 
       - name: get GDSC-Website-List-Movie
-        run: git clone https://github.com/misaalanshori/GDSC-Website-List-Movie
+        uses: actions/checkout@v2
+        with:
+          repository: misaalanshori/GDSC-Website-List-Movie
+          path: GDSC-Website-List-Movie
 
       - name: 'DEBUG: list projects'
         run: ls
