--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,14 +71,23 @@ jobs:
 
       - name: push to the other branch
         run: |
-          ls
+          ls $GITHUB_WORKSPACE/ghpg
+          echo ================
           rm $GITHUB_WORKSPACE/ghpg/* -r
           rm $GITHUB_WORKSPACE/ghpg/.* || true
           rm $GITHUB_WORKSPACE/ghpg/.github || true
-          cp $GITHUB_WORKSPACE/out/* $GITHUB_WORKSPACE/ghpg -r
+          echo ================
+          ls $GITHUB_WORKSPACE/ghpg
           cd $GITHUB_WORKSPACE/ghpg
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git add .
+          git commit -m "clean up"
+          git push
+          echo ================
+          ls $GITHUB_WORKSPACE/ghpg
+          cp $GITHUB_WORKSPACE/out/* $GITHUB_WORKSPACE/ghpg -r
+          cd $GITHUB_WORKSPACE/ghpg
           git add .
           git commit -m "generated from commit: $(cd $GITHUB_WORKSPACE; git rev-parse HEAD)"
           git push
