--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,8 @@ on:
   push:
     branches:
       - main
-  # schedule:
+  schedule:
+      - cron: '43 */2 * * *'
   #   - cron:  '*/30 * * * *' # reenable this when adding dynamic content
 
 jobs:
