--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "misa-nextjs",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recharts": "^2.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
