--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,9 @@ on:
     branches:
       - main
   schedule:
-      - cron: '43 */2 * * *'
-  #   - cron:  '*/30 * * * *' # reenable this when adding dynamic content
+      - cron: '43 */6 * * *' # every 6hr (+43min)
+  #   - cron: '43 */2 * * *' # every 2hr (+43min)
+  #   - cron:  '*/30 * * * *' # every 30 mins
 
 jobs:
   build:
