--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-on-screen": "^2.1.1",
     "recharts": "^2.1.6"
   },
   "devDependencies": {
