--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.1.0",
     "react-on-screen": "^2.1.1",
-    "recharts": "^2.1.6"
+    "recharts": "^2.1.6",
+    "rehype-raw": "^6.1.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
