--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "buildstatic": "next build && next export"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.0",
     "react-on-screen": "^2.1.1",
     "recharts": "^2.1.6",
+    "rehype-highlight": "^5.0.0",
     "rehype-raw": "^6.1.0",
     "remark-gfm": "^3.0.1"
   },
