--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -80,6 +80,8 @@ jobs:
           rm $GITHUB_WORKSPACE/ghpg/.github -r || true
           echo ================
           ls $GITHUB_WORKSPACE/ghpg
+          echo $GITHUB_WORKSPACE/ghpg/*
+          echo "--=--"
           cd $GITHUB_WORKSPACE/ghpg
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -87,7 +89,9 @@ jobs:
           git commit -m "clean up"
           git push
           echo ================
+          echo "Commit files"
           ls $GITHUB_WORKSPACE/ghpg
+          echo "--=--"
           cp $GITHUB_WORKSPACE/out/* $GITHUB_WORKSPACE/ghpg -r
           cd $GITHUB_WORKSPACE/ghpg
           touch .nojekyll
