--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "misa-nextjs",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev -H 0.0.0.0 -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
